--- a/app/src/main/res/layout/item_attendance.xml
+++ b/app/src/main/res/layout/item_attendance.xml
@@ -27,37 +27,25 @@
         android:textSize="14sp"
         android:paddingTop="4dp" />
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
+ <TextView
+        android:id="@+id/locationTextView"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="16dp">
+        android:text="Lokasi"
+        android:textSize="14sp"
+        android:paddingTop="4dp" />
 
-        <ImageView
-            android:id="@+id/photoImageView"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:src="@drawable/ic_placeholder_photo"
-            android:layout_gravity="center" />
+ <TextView
+        android:id="@+id/timeTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Waktu"
+        android:textSize="14sp"
+        android:paddingTop="4dp" />
 
-        <TextView
-            android:id="@+id/nameTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Name"
-            android:textSize="16sp"
-            android:paddingTop="8dp" />
 
-        <TextView
-            android:id="@+id/statusTextView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Status"
-            android:textSize="14sp"
-            android:paddingTop="4dp" />
 
     </LinearLayout>
 
 
-</LinearLayout>
 
